tests/binary/binary.exp
Error ------------------------------------------------------------------------------------------------------ in.js:25:15

Cannot use `in` because on the right-hand side, number [1] must be an object or array. [invalid-in-rhs]

   25|     ('foo' in 123); // error
                     ^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:26:15

Cannot use `in` because on the right-hand side, string [1] must be an object or array. [invalid-in-rhs]

   26|     ('foo' in 'bar'); // error
                     ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:27:15

Cannot use `in` because on the right-hand side, undefined [1] must be an object or array. [invalid-in-rhs]

   27|     ('foo' in void 0); // error
                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:28:15

Cannot use `in` because on the right-hand side, null [1] must be an object or array. [invalid-in-rhs]

   28|     ('foo' in null); // error
                     ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:33:6

Cannot use `in` because on the left-hand side, null [1] must be a string or number. [invalid-in-lhs]

   33|     (null in {}); // error
            ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:34:6

Cannot use `in` because on the left-hand side, undefined [1] must be a string or number. [invalid-in-lhs]

   34|     (void 0 in {}); // error
            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:35:6

Cannot use `in` because on the left-hand side, object literal [1] must be a string or number. [invalid-in-lhs]

   35|     ({} in {}); // error
            ^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:36:11

Cannot use `in` because on the left-hand side, array type [1] must be a string or number. [invalid-in-lhs]

   36|     (([]: Array<string>) in {}); // error
                 ^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:37:6

Cannot use `in` because on the left-hand side, boolean [1] must be a string or number. [invalid-in-lhs]

   37|     (false in ([]: Array<string>)); // error
            ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:42:18

Cannot use `in` because on the right-hand side, number [1] must be an object or array. [invalid-in-rhs]

   42|     if ('foo' in 123) {} // error
                        ^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:43:9

Cannot use `in` because on the left-hand side, boolean literal `false` [1] must be a string or number. [invalid-in-lhs]

   43|     if (!'foo' in {}) {} // error, !'foo' is a boolean
               ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:50:15

Cannot use `in` because on the right-hand side, mixed [1] must be an object or array. [invalid-in-rhs]

   in.js:50:15
   50|     ('foo' in y); // error
                     ^

References:
   in.js:48:26
   48|   function(x: Object, y: mixed) {
                                ^^^^^ [1]



Found 12 errors
